RESOLVED FIXED311978
Unable to interact with native PiP on Hulu.com
https://bugs.webkit.org/show_bug.cgi?id=311978
Summary Unable to interact with native PiP on Hulu.com
joanne_pan2
Reported 2026-04-10 14:39:51 PDT
When putting any video into the website’s native PiP on Hulu, none of the UI in the PiP video can be interacted with. STR: 1. Launch Safari 2. Navigate to hulu.com 3. Log into an account 4. Play any show or movie 5. Tap the native PiP button in the top right of the video player 6. Try to pause, mute, or exit PiP Results: The PiP video’s native UI does not respond to touches.
Attachments
joanne_pan2
Comment 1 2026-04-10 14:40:00 PDT
joanne_pan2
Comment 2 2026-04-10 14:53:19 PDT
EWS
Comment 3 2026-04-14 22:42:04 PDT
Committed 311261@main (9496a11100bf): <https://commits.webkit.org/311261@main> Reviewed commits have been landed. Closing PR #62491 and removing active labels.
Brent Fulgham
Comment 4 2026-04-15 11:18:56 PDT
This is actually tracked by: rdar://173988278
Note You need to log in before you can comment on or make changes to this bug.